--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 {
   "name": "DEHA AI",
   "short_name": "DEHA",
-  "start_url": "index.html",
+  "description": "Yapay Zeka Destekli Eğitim ve Araştırma Asistanı",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "https://img.icons8.com/fluency/192/artificial-intelligence.png",
